--- a/main/res/values/dimens.xml
+++ b/main/res/values/dimens.xml
@@ -4,4 +4,12 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="thumbnail_height">160dp</dimen>
+    <dimen name="movie_title_padding">10dp</dimen>
+    <dimen name="movie_title">15dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_album_radius">1dp</dimen>
+    <dimen name="card_elevation">3dp</dimen>
+
 </resources>
