--- a/main/res/values/dimens.xml
+++ b/main/res/values/dimens.xml
@@ -6,10 +6,11 @@
     <dimen name="appbar_padding_top">8dp</dimen>
 
     <dimen name="thumbnail_height">160dp</dimen>
-    <dimen name="movie_title_padding">10dp</dimen>
-    <dimen name="movie_title">15dp</dimen>
+    <dimen name="movie_title_padding">16dp</dimen>
+    <dimen name="movie_title_font_size">16sp</dimen>
+    <dimen name="movie_second_title_font_size">12sp</dimen>
     <dimen name="card_margin">5dp</dimen>
-    <dimen name="card_album_radius">1dp</dimen>
-    <dimen name="card_elevation">3dp</dimen>
+    <dimen name="card_album_radius">2dp</dimen>
+    <dimen name="card_elevation">2dp</dimen>
 
 </resources>
