--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -1,11 +1,6 @@
-<!--?xml version="1.0" encoding="UTF-8"?-->
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#009688</color>
-    <color name="primaryLightColor">#52c7b8</color>
-    <color name="primaryDarkColor">#00675b</color>
-    <color name="secondaryColor">#9e9e9e</color>
-    <color name="secondaryLightColor">#cfcfcf</color>
-    <color name="secondaryDarkColor">#707070</color>
-    <color name="primaryTextColor">#000000</color>
-    <color name="secondaryTextColor">#000000</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
