--- a/main/res/layout/item_movie.xml
+++ b/main/res/layout/item_movie.xml
@@ -5,33 +5,37 @@
     android:orientation="vertical">
 
 
-        <ImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/thumbnail_height"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:contentDescription="@string/thumbnail"
-            android:focusable="true"
-            android:scaleType="fitXY" />
+    <ImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/thumbnail_height"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:contentDescription="@string/thumbnail"
+        android:focusable="true"
+        android:scaleType="fitXY" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:paddingLeft="@dimen/movie_title_padding"
-            android:paddingRight="@dimen/movie_title_padding"
-            android:paddingTop="@dimen/movie_title_padding"
-            android:textSize="@dimen/movie_title_font_size" />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:paddingLeft="@dimen/movie_title_padding"
+        android:paddingRight="@dimen/movie_title_padding"
+        android:paddingTop="@dimen/movie_title_padding"
+        android:textSize="@dimen/movie_title_font_size" />
 
-        <TextView
-            android:id="@+id/secondTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/movie_title_padding"
-            android:paddingEnd="@dimen/movie_title_padding"
-            android:paddingStart="@dimen/movie_title_padding"
-            android:textSize="@dimen/movie_second_title_font_size" />
+
+    <TextView
+        android:id="@+id/releaseYear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_date_range_black_24dp"
+        android:paddingBottom="@dimen/movie_title_padding"
+        android:paddingEnd="@dimen/movie_title_padding"
+        android:paddingStart="@dimen/movie_title_padding"
+        android:textSize="@dimen/movie_second_title_font_size" />
+
 
 </LinearLayout>
