--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="card_margin">5dp</dimen>
     <dimen name="card_album_radius">2dp</dimen>
     <dimen name="card_elevation">2dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 </resources>
