--- a/app/src/main/res/menu/menu_movies.xml
+++ b/app/src/main/res/menu/menu_movies.xml
@@ -4,6 +4,5 @@
         android:id="@+id/search"
         android:title="@string/search"
         android:icon="@drawable/ic_search_black_24dp"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="always" />
 </menu>
